--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-30  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* NEWS: Version 1.3.10 released.
+	* configure.ac (AC_INIT): Likewise.
+
 2006-12-29  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* zless.in: Work around a bug in less 394 and earlier; it
