--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Major changes in Gzip 1.3.10 (200?-??-??)
+Major changes in Gzip 1.3.10 (2006-12-30)
 
 * gzip -c and zcat now work on special files, files with special mode bits,
   and files with multiple hard links.
@@ -6,6 +6,7 @@ Major changes in Gzip 1.3.10 (200?-??-??)
 * zcmp and zdiff did not work in the usual case, due to a typo.
 * zgrep has many bugs fixed with argument handling, special characters,
   and exit status.
+* zless no longer mishandles $%=~ in file names.
 
 Gzip 1.3.9 (2006-12-15)
 
