--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-01-03  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* zdiff.in: Test /dev//fd/3, not /dev/fd/3, to work around a problem
+	with Tru64 4.0F ksh M-11/16/88f reported by Thomas Koutcher in
+	<http://lists.gnu.org/archive/html/bug-gzip/2007-01/msg00000.html>.
+
 2006-12-30  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* NEWS: Version 1.3.10 released.
