--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-02-05  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* .cvsignore: Add *.gz, gunzip, zcat, zcmp, zegrep, zfgrep.
+	* lib/.cvsignore: Add sys_time_.h, unistd_.h.
+	* m4/.cvsignore: Add gnulib-common.m4, sys_time_h.m4.
+
 	* gunzip.in, zcat.in, zcmp.in, zegrep.in, zfgrep.in: New files.
 	* Makefile.am (EXTRA_DIST): Add them.
 	(bin_SCRIPTS, MOSTLYCLEANFILES): Add gunzip, zcat, zcmp, zdgrep, zfgrep.
