--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2007-02-05  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* NEWS: Version 1.3.11 released.
+	* configure.ac (AC_INIT): Likewise.
+
 	* doc/gzip.texi: Convert Texinfo format into a more modern style.
 	Put in current output samples.
 
