--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-02-08  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* zdiff.in: Don't use '((' in a shell script, as it's not portable
+	to some ksh implementations, e.g., Solaris 10 ksh M-11/16/88i.
+	Problem reported by Nelson H. F. Beebe in
+	<http://lists.gnu.org/archive/html/bug-gzip/2007-02/msg00005.html>.
+
 2007-02-05  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* NEWS: Version 1.3.11 released.
