--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-02-11  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* gzip.c (foreground): Initialize to zero.  This doesn't fix a bug
+	since C guarantees it's zero, but it's more consistent with the
+	rest of the code.  Problem reported by Mark Adler.
+
 2007-02-08  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* zdiff.in: Don't use '((' in a shell script, as it's not portable
