--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-03-14  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* README (WARNING): Reword to avoid mention of no-longer-existing
+	section in INSTALL file.  Problem reported by Paul Townsend in
+	<http://lists.gnu.org/archive/html/bug-gzip/2007-03/msg00000.html>.
+
 2007-02-11  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* gzip.c (foreground): Initialize to zero.  This doesn't fix a bug
