--- a/README
+++ b/README
@@ -32,10 +32,8 @@ INSTALL for installation instructions. Some answers to frequently
 asked questions are given in the file INSTALL, please read it. (In
 particular, please don't ask me once more for an /etc/magic entry.)
 
-WARNING: on several systems, compiler bugs cause gzip to fail, in
-particular when optimization options are on.  See the section "Special
-targets" at the end of the INSTALL file for a list of known problems.
-For all machines, use "make check" to check that gzip was compiled
+WARNING: gzip is sensitive to compiler bugs, particularly when
+optimizing.  Use "make check" to check that gzip was compiled
 correctly.  Try compiling gzip without any optimization if you have a
 problem.
 
