--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
 
 	* NEWS: 'gzip -f foo.gz' now works instead of complaining.
 	* gzip.c (make_ofname): Implement this.
-	Problem reported by Sven Hartrump in
+	Problem reported by Sven Hartrumpf in
 	<http://lists.gnu.org/archive/html/bug-gzip/2007-05/msg00003.html>.
 
 	* NEWS, gzip.1: Document that case is ignored when looking at file name
