--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+GNU gzip NEWS                                    -*- outline -*-
+
+* Noteworthy changes in release ?.?.? (????-??-??) [?]
+
+** Bug fixes
+
+
 Major changes in Gzip 1.3.12 (2007-04-13)
 
 * znew now uses $TMPDIR (default /tmp) instead of always using /tmp.
