--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 This is the file README for the gzip distribution.
 
+The GNU gzip home page is http://www.gnu.org/software/gzip.
+
 gzip (GNU zip) is a compression utility designed to be a replacement
 for 'compress'. Its main advantages over compress are much better
 compression and freedom from patented algorithms.  The GNU Project
@@ -27,10 +29,8 @@ Huffman encoder. gunzip is able to decompress .z files (packed
 or gzip'ed).
 
 Several planned features are not yet supported (see the file TODO).
-See the file NEWS for a summary of changes since 0.5.  See the file
-INSTALL for installation instructions. Some answers to frequently
-asked questions are given in the file INSTALL, please read it. (In
-particular, please don't ask me once more for an /etc/magic entry.)
+See the file NEWS for a summary of changes since the last release.
+See the file INSTALL for installation instructions.
 
 WARNING: gzip is sensitive to compiler bugs, particularly when
 optimizing.  Use "make check" to check that gzip was compiled
@@ -52,14 +52,8 @@ Bug reports should ideally include:
 If you send me patches for machines I don't have access to, please test them
 very carefully. gzip is used for backups, it must be extremely reliable.
 
-GNU tar 1.11.2 has a -z option to invoke directly gzip, so you don't have to
-patch it. The package ftp.uu.net:/languages/emacs-lisp/misc/jka-compr19.el.Z
-also supports gzip'ed files.
-
 The znew and gzexe shell scripts provided with gzip benefit from
-(but do not require) the cpmod utility to transfer file attributes.
-It is available in
-ftp://gatekeeper.dec.com/pub/usenet/comp.sources.unix/volume11/cpmod.Z.
+(but do not require) the (non-GNU) cpmod utility to transfer file attributes.
 
 The sample programs zread.c, sub.c and add.c in subdirectory sample
 are provided as examples of useful complements to gzip. Read the
@@ -136,7 +130,7 @@ Copyright (C) 1999, 2001-2002, 2006-2007, 2009 Free Software Foundation, Inc.
 Copyright (C) 1992, 1993 Jean-loup Gailly
 
 Permission is granted to copy, distribute and/or modify this document
-under the terms of the GNU Free Documentation License, Version 1.2 or
+under the terms of the GNU Free Documentation License, Version 1.3 or
 any later version published by the Free Software Foundation; with no
 Invariant Sections, with no Front-Cover Texts, and with no Back-Cover
 Texts.  A copy of the license is included in the ``GNU Free
