--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 GNU gzip NEWS                                    -*- outline -*-
 
-* Noteworthy changes in release ?.? (????-??-??) [?]
+* Noteworthy changes in release 1.3.14 (2009-10-30) [beta]
 
 ** Bug fixes
 
