--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 GNU gzip NEWS                                    -*- outline -*-
 
-* Noteworthy changes in release ?.? (????-??-??) [?]
+* Noteworthy changes in release 1.4 (2010-01-20) [stable]
 
 ** Bug fixes
 
