--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 GNU gzip NEWS                                    -*- outline -*-
 
+* Noteworthy changes in release ?.? (????-??-??) [?]
+
+
 * Noteworthy changes in release 1.4 (2010-01-20) [stable]
 
 ** Bug fixes
